Fix crash when using the transform tool on a colorize mask

This fixes a crash when the transform tool is selected while
using a colorize mask in the layer stack with edit-key-strokes
option set to OFF.

Differential Revision:  https://phabricator.kde.org/D19906
BUG: 404759